<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="100dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/current_speed"
        android:textSize="40sp"
        android:textFontWeight="700"
        android:textColor="@color/black"
        android:layout_marginTop="15dp">
        <!--        android:text="@string/speed"-->
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/current_speed"
        android:textSize="17sp"
        android:textFontWeight="500"
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distance_left"
        android:textSize="40sp"
        android:textFontWeight="700"
        android:textColor="@color/black"
        android:layout_marginTop="15dp">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/distance"
        android:textSize="17sp"
        android:textFontWeight="500">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reqd_speed"
        android:textSize="40sp"
        android:textFontWeight="700"
        android:textColor="@color/black"
        android:layout_marginTop="15dp">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:text="@string/reqd_speed"
        android:textSize="17sp"
        android:textFontWeight="500">
    </TextView>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3">
        <ImageView
            android:contentDescription="@string/red_light"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="17dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/redlight"
            android:layout_marginEnd="17dp">
        </ImageView>
        <ImageView
            android:contentDescription="@string/yellow_light"
            android:layout_width="100dp"
            android:layout_marginRight="10dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/yellowlight">
        </ImageView>
        <ImageView
            android:contentDescription="@string/green_light"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/greenlight"
            android:layout_marginLeft="0dp">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_light"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textFontWeight="600">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/yellow_light"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textFontWeight="600">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/green_light"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textFontWeight="600">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/duration_red"
            android:id="@+id/duration_red"
            android:textSize="20sp"
            android:textFontWeight="600">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/duration_yellow"
            android:id="@+id/duration_yellow"
            android:textSize="20sp"
            android:textFontWeight="600">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/duration_green"
            android:id="@+id/duration_green"
            android:textSize="20sp"
            android:textFontWeight="600">
        </TextView>
    </GridLayout>
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="100dp"-->
<!--        android:background="@color/design_default_color_secondary"-->
<!--        android:orientation="horizontal">-->
<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="10dp"-->
<!--            android:src="@drawable/ic_launcher_foreground">-->
<!--        </ImageView>-->
<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="10dp"-->
<!--            android:src="@drawable/ic_launcher_foreground">-->
<!--        </ImageView>-->
<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="10dp"-->
<!--            android:src="@drawable/ic_launcher_foreground">-->
<!--        </ImageView>-->
<!--    </LinearLayout>-->
</LinearLayout>